Lots of changes/additions, changed blueprintjs dependency to material-ui

--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="no-referrer" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>React and Webpack4</title>
-
-    <link
-      href="../node_modules/@blueprintjs/core/lib/css/blueprint.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css"
-      rel="stylesheet"
-    />
+    <title>Hakuro</title>
   </head>
   <body>
-    <section id="index"></section>
+    <section id="app"></section>
   </body>
 </html>
